--- a/ReadingList/UI/ArticleWebView/Article.storyboard
+++ b/ReadingList/UI/ArticleWebView/Article.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,31 +18,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Auj-YC-n16">
-                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
-                                <color key="backgroundColor" name="SoftBlue"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8P7-Mf-ixy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FJ0-Ue-UUW">
+                                <rect key="frame" x="0.0" y="587" width="375" height="80"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="EDE-qr-Lvo"/>
+                                    <constraint firstAttribute="height" constant="80" id="5Wv-te-Uva"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Auj-YC-n16" firstAttribute="bottom" secondItem="5Lk-Yv-NQW" secondAttribute="bottom" id="d2E-c9-2OL"/>
-                            <constraint firstItem="Auj-YC-n16" firstAttribute="leading" secondItem="5Lk-Yv-NQW" secondAttribute="leading" id="nES-Zn-I2I"/>
-                            <constraint firstItem="Auj-YC-n16" firstAttribute="trailing" secondItem="5Lk-Yv-NQW" secondAttribute="trailing" id="sfe-JE-yfl"/>
+                            <constraint firstItem="5Lk-Yv-NQW" firstAttribute="trailing" secondItem="FJ0-Ue-UUW" secondAttribute="trailing" id="7pQ-mG-Y0n"/>
+                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="top" secondItem="5Lk-Yv-NQW" secondAttribute="top" id="I9v-z5-rAH"/>
+                            <constraint firstItem="FJ0-Ue-UUW" firstAttribute="bottom" secondItem="5Lk-Yv-NQW" secondAttribute="bottom" id="ZZK-Fi-gAE"/>
+                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="leading" secondItem="5Lk-Yv-NQW" secondAttribute="leading" id="gzp-18-YHm"/>
+                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="trailing" secondItem="5Lk-Yv-NQW" secondAttribute="trailing" id="vwp-bQ-lVs"/>
+                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="bottom" secondItem="5Lk-Yv-NQW" secondAttribute="bottom" id="xt6-E3-ZsB"/>
+                            <constraint firstItem="FJ0-Ue-UUW" firstAttribute="leading" secondItem="5Lk-Yv-NQW" secondAttribute="leading" id="yjh-E3-q6b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5Lk-Yv-NQW"/>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="8P7-Mf-ixy" id="Edp-UZ-fvU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eYK-f2-y2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="141.59999999999999" y="138.98050974512745"/>
         </scene>
     </scenes>
-    <resources>
-        <namedColor name="SoftBlue">
-            <color red="0.37647058823529411" green="0.47058823529411764" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-    </resources>
 </document>
