--- a/ReadingList/UI/ArticleWebView/Article.storyboard
+++ b/ReadingList/UI/ArticleWebView/Article.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MvF-uu-vJZ">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="MvF-uu-vJZ" customClass="ArticleWebVC" customModule="ReadingList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zU9-mi-RHf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8P7-Mf-ixy">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -27,10 +27,10 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FJ0-Ue-UUW" customClass="WebToolBarView" customModule="ReadingList" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="587" width="375" height="80"/>
+                                <rect key="frame" x="0.0" y="742" width="375" height="70"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="5Wv-te-Uva"/>
+                                    <constraint firstAttribute="height" constant="70" id="5Wv-te-Uva"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -38,10 +38,10 @@
                         <constraints>
                             <constraint firstItem="5Lk-Yv-NQW" firstAttribute="trailing" secondItem="FJ0-Ue-UUW" secondAttribute="trailing" id="7pQ-mG-Y0n"/>
                             <constraint firstItem="8P7-Mf-ixy" firstAttribute="top" secondItem="5Lk-Yv-NQW" secondAttribute="top" id="I9v-z5-rAH"/>
-                            <constraint firstItem="FJ0-Ue-UUW" firstAttribute="bottom" secondItem="5Lk-Yv-NQW" secondAttribute="bottom" id="ZZK-Fi-gAE"/>
+                            <constraint firstItem="FJ0-Ue-UUW" firstAttribute="bottom" secondItem="zU9-mi-RHf" secondAttribute="bottom" id="ZZK-Fi-gAE"/>
                             <constraint firstItem="8P7-Mf-ixy" firstAttribute="leading" secondItem="5Lk-Yv-NQW" secondAttribute="leading" id="gzp-18-YHm"/>
                             <constraint firstItem="8P7-Mf-ixy" firstAttribute="trailing" secondItem="5Lk-Yv-NQW" secondAttribute="trailing" id="vwp-bQ-lVs"/>
-                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="bottom" secondItem="5Lk-Yv-NQW" secondAttribute="bottom" id="xt6-E3-ZsB"/>
+                            <constraint firstItem="8P7-Mf-ixy" firstAttribute="bottom" secondItem="zU9-mi-RHf" secondAttribute="bottom" id="xt6-E3-ZsB"/>
                             <constraint firstItem="FJ0-Ue-UUW" firstAttribute="leading" secondItem="5Lk-Yv-NQW" secondAttribute="leading" id="yjh-E3-q6b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5Lk-Yv-NQW"/>
