--- a/ReadingList/UI/CustomView/WebTooBar/WebToolBarView.xib
+++ b/ReadingList/UI/CustomView/WebTooBar/WebToolBarView.xib
@@ -19,17 +19,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4rt-EO-0ea">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9mR-V0-06h">
-                            <rect key="frame" x="24" y="0.0" width="327" height="80"/>
+                            <rect key="frame" x="24" y="0.0" width="327" height="40"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="q0p-cZ-hxD">
-                                    <rect key="frame" x="0.0" y="22" width="70" height="36"/>
+                                    <rect key="frame" x="0.0" y="2" width="70" height="36"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Etn-UB-55Q">
                                             <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -54,8 +54,8 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9c4-mi-SMW">
-                                    <rect key="frame" x="127.5" y="25" width="97" height="30"/>
-                                    <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="18"/>
+                                    <rect key="frame" x="135.5" y="6.5" width="81" height="27"/>
+                                    <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="15"/>
                                     <state key="normal" title=" + 後で読む">
                                         <color key="titleColor" name="CornFlower"/>
                                     </state>
@@ -64,7 +64,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjj-zN-05b">
-                                    <rect key="frame" x="307" y="30" width="20" height="20"/>
+                                    <rect key="frame" x="307" y="10" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="xjj-zN-05b" secondAttribute="height" multiplier="1:1" id="7yq-ug-K6n"/>
                                         <constraint firstAttribute="width" constant="20" id="OsQ-Hq-rhZ"/>
@@ -82,7 +82,7 @@
                         <constraint firstItem="9mR-V0-06h" firstAttribute="top" secondItem="4rt-EO-0ea" secondAttribute="top" id="WfZ-XG-Vk6"/>
                         <constraint firstItem="9mR-V0-06h" firstAttribute="leading" secondItem="4rt-EO-0ea" secondAttribute="leading" constant="24" id="Xg3-Om-OO9"/>
                         <constraint firstAttribute="trailing" secondItem="9mR-V0-06h" secondAttribute="trailing" constant="24" id="jvz-IR-zi3"/>
-                        <constraint firstAttribute="bottom" secondItem="9mR-V0-06h" secondAttribute="bottom" id="vBb-6v-Nuc"/>
+                        <constraint firstAttribute="bottom" secondItem="9mR-V0-06h" secondAttribute="bottom" constant="20" id="vBb-6v-Nuc"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
